# abs

./: .gitignore  README.md
community/ack/: PKGBUILD
community/adb/: Makefile  PKGBUILD  patch-usb_libusb.c
community/argp-standalone/: PKGBUILD
community/asciidoc/: PKGBUILD
community/aspell-hu/: PKGBUILD
community/aspell-pt/: PKGBUILD
community/aspell-ru/: PKGBUILD
community/assimp/: PKGBUILD  patch-clang
community/autoconf-archive/: PKGBUILD
community/autocutsel/: PKGBUILD
community/awesome/: PKGBUILD  patch-awesomeConfig.cmake  patch-naughty
community/awesomewm/: PKGBUILD
community/backlite/: PKGBUILD
community/bam/: 01-make_unix_clang.patch  PKGBUILD
community/bamf/: PKGBUILD
community/bin86/: PKGBUILD
community/bleachbit/: PKGBUILD  archbsd.patch  fix-makefile.patch  pacbsd.patch
community/blender/: PKGBUILD
community/bmpanel2/: PKGBUILD
community/brise/: PKGBUILD
community/bullet/: PKGBUILD
community/bwm-ng/: PKGBUILD
community/bzr/: PKGBUILD
community/cabextract/: PKGBUILD
community/calc/: PKGBUILD
community/calcurse/: PKGBUILD
community/ccache/: PKGBUILD
community/cdrtools/: PKGBUILD  cdrtools.install  patch-cdrecord-README.rscsi  patch-rscsi-rscsi.dfl
community/celt/: PKGBUILD
community/celt0.5.1/: PKGBUILD
community/chmlib/: PKGBUILD
community/chrpath/: PKGBUILD
community/clamz/: PKGBUILD
community/cmus/: PKGBUILD  check-sh.patch
community/codeblocks/: PKGBUILD
community/confuse/: PKGBUILD
community/cowsay/: PKGBUILD
community/cppcheck/: PKGBUILD
community/ctpl/: PKGBUILD
community/dblatex/: PKGBUILD
community/deadbeef/: PKGBUILD
community/desmume/: PKGBUILD  patch-src_utils_task.cpp
community/dev86/: PKGBUILD
community/devil/: PKGBUILD  gcc-5.0.patch
community/dfc/: PKGBUILD
community/distcc/: PKGBUILD
community/dmake/: PKGBUILD
community/dmenu/: PKGBUILD
community/docbook2x/: PKGBUILD  datadir.diff  docbook2x.install
community/docutils/: PKGBUILD
community/dos2unix/: PKGBUILD
community/dosbox/: PKGBUILD
community/dvtm/: 02-terminfo-path.patch  PKGBUILD
community/dwb/: PKGBUILD  number-type-mixup-fix.diff  patch-dwb-session.c  patch-dwbremote-help
community/dwm/: PKGBUILD
community/dynagen/: PKGBUILD
community/dynamips-community/: PKGBUILD  c7200_i0_log.txt  patch-stable-Makefile
community/e2fsprogs/: PKGBUILD  patch-misc__Makefile.in
community/eclipse-ecj/: PKGBUILD
community/emacs-nox/: PKGBUILD
community/enet/: PKGBUILD
community/espeak/: PKGBUILD
community/etcd/: PKGBUILD
community/etcdctl/: PKGBUILD
community/expect/: PKGBUILD
community/ezjail/: Makefile.patch  PKGBUILD
community/fbterm/: PKGBUILD
community/fcitx/: PKGBUILD
community/fcitx-configtool/: PKGBUILD
community/fcitx-mozc/: PKGBUILD  fcitx-mozc-1.11.1502.102.1.patch  patch-base_base.gyp  patch-gui-qt_libraries.gypi  patch-gyp_common.gypi
community/ffmpeg-compat/: PKGBUILD
community/filezilla/: PKGBUILD
community/flatastic-themes/: PKGBUILD
community/fpc/: PKGBUILD
community/fpc-src/: PKGBUILD
community/fsv/: PKGBUILD
community/ftjam/: PKGBUILD
community/geany/: PKGBUILD
community/geany-plugins/: PKGBUILD
community/gendesk/: PKGBUILD
community/gksu/: PKGBUILD
community/glfw/: PKGBUILD
community/glm/: PKGBUILD
community/gloox/: PKGBUILD
community/gmpc/: PKGBUILD
community/gnome-python/: PKGBUILD
community/gns3/: PKGBUILD  gns3.install
community/gnutls/: PKGBUILD
community/go/: PKGBUILD
community/google-glog/: PKGBUILD
community/gsoap/: PKGBUILD
community/gtest/: PKGBUILD
community/gtk-sharp-2/: PKGBUILD
community/gtk-vnc/: PKGBUILD
community/gtkglarea1/: PKGBUILD
community/gtkglextmm/: PKGBUILD
community/gtkspell3/: PKGBUILD
community/haskell-data-default/: PKGBUILD
community/haskell-data-default-class/: PKGBUILD
community/haskell-data-default-instances-base/: PKGBUILD
community/haskell-data-default-instances-containers/: PKGBUILD
community/haskell-data-default-instances-dlist/: PKGBUILD
community/haskell-data-default-instances-old-locale/: PKGBUILD
community/haskell-dlist/: PKGBUILD
community/haskell-extensible-exceptions/: PKGBUILD
community/haskell-mtl/: PKGBUILD
community/haskell-old-locale/: PKGBUILD  haskell-old-locale.install
community/haskell-old-time/: PKGBUILD
community/haskell-random/: PKGBUILD
community/haskell-utf8-string/: PKGBUILD
community/haskell-x11/: PKGBUILD
community/haskell-x11-xft/: PKGBUILD
community/heimdall/: PKGBUILD
community/herbstluftwm/: PKGBUILD
community/hex-a-hop/: PKGBUILD
community/hexchat/: PKGBUILD
community/hexedit/: PKGBUILD
community/highlight/: PKGBUILD
community/i3-wm/: PKGBUILD
community/i3status/: PKGBUILD
community/i7z/: PKGBUILD
community/icoutils/: PKGBUILD
community/ifuse/: PKGBUILD
community/ii/: PKGBUILD
community/ioping/: PKGBUILD
community/ipsec-tools/: PKGBUILD  patch8-utmp.diff  racoon.in
community/ipython/: PKGBUILD
community/isodate/: PKGBUILD
community/java-avalon-framework/: PKGBUILD
community/java-batik/: PKGBUILD
community/java-commons-io/: PKGBUILD
community/java-commons-logging/: PKGBUILD
community/java-xmlgraphics-commons/: PKGBUILD
community/jbig2dec/: PKGBUILD
community/jbigkit/: PKGBUILD
community/jnettop/: PKGBUILD
community/js185/: PKGBUILD
community/k3b/: PKGBUILD  allFREEBSDpatches.patch
community/kBuild/: PKGBUILD
community/keepassx/: PKGBUILD
community/keybinder2/: PKGBUILD
community/kyotocabinet/: PKGBUILD
community/lash/: PKGBUILD
community/lazarus/: PKGBUILD
community/lci/: PKGBUILD
community/ldoc/: PKGBUILD
community/lgi/: PKGBUILD
community/libasr/: PKGBUILD
core/: build_order
extra/jade/: Makefile.am  PKGBUILD  configure.ac  grove_Makefile.am  jade_Makefile.am  lib_Makefile.am  nsgmls_Makefile.am  patch-assert.cxx  sgmlnorm_Makefile.am  spam_Makefile.am  spent_Makefile.am  spgrove_Makefile.am  style_Makefile.am  sx_Makefile.am
hooks/: pre-commit
multilib/: lib32-vercheck.sh
multilib/lib32-mesa/: PKGBUILD  configure.ac  patch-configure
(+2994 files in other folders)
